<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/psts"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/flwers"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/flwing"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/fullname"
            android:textAlignment="center"
            android:paddingTop="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/posts"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/following"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="0dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:text="@string/follow"
            android:layout_marginLeft="14dp"
            android:textColor="@android:color/background_light"
            android:background="@color/colorAccent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating1"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>



    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_weight="0"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>