<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/divider0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dp"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_margin="8dp"
            android:layout_weight="0"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/somebody"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_weight="1"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="12dp"
        android:paddingLeft="8dp">

        <Button
            android:id="@+id/rate"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:background="@color/colorAccent"
            android:text="@string/rate"
            android:textColor="@android:color/background_light"
             />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="viewEnd"
            android:text="@string/rating"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cmnt"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:textSize="14sp"
        android:background="@null"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        />


</LinearLayout>